[package]
name = "publish"
version = "0.1.4"
edition = "2024"

[dependencies]
#steady_state     = "0.2.0"
steady_state     = { path = "../../../steady-state-stack/core", features = ["exec_async_std", "telemetry_server_builtin"], default-features = false }

clap             = { version = "4.5.36", features = ["derive"] }